bazarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
  name: bazarr
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: bazarr-cm
        image: lscr.io/linuxserver/bazarr:latest
        imagePullPolicy: Always
        name: bazarr
        ports:
        - containerPort: 6767
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: bazarr-config
        - mountPath: /data
          name: media
      volumes:
        - persistentVolumeClaim:
            claimName: bazarr
          name: bazarr-config
        - name: media
          nfs:
            server: 10.0.0.100
            path: /volume1/media
