bazarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bazarr
  name: bazarr
  namespace: servarr
spec:
  ports:
    - name: "web"
      port: 6767
      targetPort: 6767
  selector:
    app: bazarr
  type: ClusterIP
